# rsdrav

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  GUIDE.md  README.md  cobertura.xml
.github/workflows/: ci.yml
benches/: benchmarks.rs  comprehensive_bench.rs  render_benchmark.rs
examples/: animation.rs  async_demo.rs  command_palette.rs  counter.rs  dashboard.rs  data_table.rs  demo.rs  file_browser.rs  hello.rs  login.rs  system_monitor.rs  wasm_plugin_demo.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_buffer_ops.rs  fuzz_command_parser.rs  fuzz_layout.rs  fuzz_signal_updates.rs
plugins/: counter.rhai  hello.rhai
src/: error.rs  event.rs  event_router.rs  focus.rs  lib.rs  theme.rs
src/animation/: easing.rs  mod.rs
src/app/: mod.rs
src/async_support/: mod.rs
src/command/: complete.rs  handler.rs  help.rs  mod.rs  undo.rs
src/layout/: containers.rs  flex.rs  mod.rs
src/plugin/: dylib_loader.rs  mod.rs  rhai_loader.rs  wasm_loader.rs
src/render/: backend.rs  buffer.rs  diff.rs  mod.rs  renderer.rs
src/state/: derived.rs  mod.rs  signal.rs  store.rs
src/view/: component.rs  mod.rs  widgets.rs
src/view/widgets/: input.rs  list.rs  modal.rs  progress.rs  scrollable.rs  table.rs  tabs.rs
tests/: integration.rs  integration_tests.rs  visual_regression.rs
tests/snapshots/: visual_regression__complex_layout_visual.snap  visual_regression__input_widget_visual.snap  visual_regression__list_widget_visual.snap.new  visual_regression__modal_widget_visual.snap.new  visual_regression__panel_visual.snap  visual_regression__progress_bar_visual.snap  visual_regression__reactive_text_visual-2.snap  visual_regression__reactive_text_visual.snap.new  visual_regression__table_widget_visual.snap.new  visual_regression__text_widget_visual.snap  visual_regression__vstack_visual.snap.new
tools/: memory_test.rs  stress_test.rs
